# abaqus-data-bridge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS_SPECIFICATION.md  adb_cli.spec  adb_gui.spec  build_exe.bat  build_exe.py  pyproject.toml  run_cli.py
.github/workflows/: publish.yml  test.yml
adb/: __init__.py  cli.py  gui.py
adb/core/: engine.py  matcher.py  statistics.py
adb/exporters/: csv_exporter.py  streaming.py
adb/models/: dat_model.py  extraction_config.py  inp_model.py
adb/parsers/: dat_parser.py  inp_parser.py  version_patterns.py
adb/templates/: config_template.yaml
adb/utils/: encoding.py  fortran.py  logging.py  progress.py
docs/: abaqus_inp_dat_format_guide.md  user_guide_zh.md
examples/: batch_extract.py  extract_contact.py  extract_spring.py  extract_truss.py
tests/: test_contact.py  test_dat_parser.py  test_debug_logging.py  test_inp_parser.py  test_integration.py  test_utils.py
tests/fixtures/: beam_sf.inp  contact_model.inp  simple_truss.inp  spring_model.inp
